Fix font size hour display on small screen

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
 @media screen and (max-width: 528px) {
 
     .wrapper-grid .hour {
-        font-size: 17vw;
+        font-size: 15vw;
     }
 
     .wrapper-grid .format-wrapper {
